<resources>
    <string name="app_name">Camino Al Cielo</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_cuenta">Cuenta</string>
    <string name="title_alumnos">Alumnos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="derReservados">Todos los derechos reservados</string>
    <string name="Login">Iniciar Sesión</string>
    <string name="CreateAccount">Crear Cuenta</string>
    <string name="helperUser">Ej. 78451254</string>
    <string name="etUser">Dni</string>
    <string name="edtApellidos">Apellidos</string>
    <string name="edtNombres">Nombres</string>
    <string name="etPassword">Contraseña</string>
    <string name="btnLogin">Iniciar</string>
    <string name="btnCreateAccount">Crear</string>
    <string name="txtSinCuenta">No tiene una cuenta?</string>
    <string name="txtConCuenta">Ya tiene una cuenta?</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="CrearAlumno">Crear Alumno</string>
    <string name="volver">volver</string>
    <string name="AgregarAlumno">Agregar Alumno</string>
    <string name="SelectAvatar">Seleccione Avatar</string>
    <string name="sinAlumnos">Actualmente no tienes ningun alumno registrado</string>
    <string name="tituloDialogo">Que deseas hacer?</string>
    <string name="registrarPuntos">Registrar Puntos</string>
    <string name="exportarPdf">Exportar Datos PDF</string>
    <string name="participacion">Participación</string>
    <string name="asistencia">Asistencia</string>
    <string name="biblia">Biblia\n</string>
    <string name="descargarPdf">Descargar PDF</string>
    <string name="subTotal">SubTotal</string>
    <string name="Total">Total</string>
    <string name="sinRegistros">Actualmente no cuentas con ningun registro</string>
    <string name="topAlumnos">Alumnos con mayor puntaje</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="editarPerfil">Actualizar Datos</string>
    <string name="cambiarIdioma">Cambiar idioma</string>
    <string name="tamFuente">Tamaño de fuente</string>
    <string name="Lenguajes">Seleccione idioma</string>
    <string name="ajutes">Ajustes y Soporte</string>
    <string name="misDatos">Mis datos</string>
    <string name="ActualizarDatos">Actualiza tus datos personales</string>
    <string name="actualizar">Actualizar Datos</string>
    <string name="editarAlumno">Editar Alumno</string>
</resources>