<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_bg_wlp"
            android:orientation="vertical"
            android:layout_weight="0.5">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="95dp"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:src="@drawable/logo" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Login"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/poppins_semibold"/>

            <TextView
                android:id="@+id/tvMensaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No se encontro usuario"
                android:textSize="12sp"
                android:textColor="@color/error"
                android:visibility="gone"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDniLogin"
                android:layout_width="match_parent"
                android:layout_marginTop="24dp"
                style="@style/Widget.Design.TextInputLayout"
                app:helperText="@string/helperUser"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDniLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:hint="@string/etUser"
                    android:textSize="12sp"
                    android:maxLength="8"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPasswordLogin"
                android:layout_width="match_parent"
                android:layout_marginTop="24dp"
                style="@style/Widget.Design.TextInputLayout"
                app:endIconMode="password_toggle"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPasswordLogin"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/poppins_light"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="12sp"
                    android:hint="@string/etPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:textAllCaps="false"
                android:text="@string/btnLogin" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvLogin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/txtSinCuenta"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  "/>

        <TextView
            android:id="@+id/tvCrearCuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/CreateAccount"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>