<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Alumnos.AgregarAlumnoActivity">

    <LinearLayout
        android:id="@+id/barTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivAtrasCrearAlumno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_atras"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volver"
                android:fontFamily="@font/poppins_regular"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivLogoCrearAlumno"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:src="@drawable/logo"
                app:tint="@color/principal"/>


        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:cardElevation="6dp"
        android:foreground="?attr/selectableItemBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/add_alumno"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#46000000"
                android:elevation="8dp">

            </View>

        </RelativeLayout>

        <TextView
            android:id="@+id/tvNombreCurso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="Comunicación"/>


        <!--        <TextView-->
        <!--            android:id="@+id/tvSedeName"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:fontFamily="@font/poppins_bold"-->
        <!--            android:text="Los Olivos - Lima"-->
        <!--            android:textAlignment="center"-->
        <!--            android:textSize="20sp" />-->

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="error"
        android:visibility="gone"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:textColor="@color/error"
        android:fontFamily="@font/poppins_light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNombres"
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/edtNombres"
                android:textSize="12sp"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilApellidos"
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/edtApellidos"
                android:textSize="12sp"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDni"
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtDni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/etUser"
                android:textSize="12sp"
                android:maxLength="8"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- avatars -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SelectAvatar"
            android:layout_gravity="start"
            android:layout_marginVertical="10dp"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_regular"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAvatars"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <!-- fin avatars -->

        <Button
            android:id="@+id/btnAgregarAlumno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:layout_marginVertical="10dp"
            android:textAllCaps="false"
            android:text="@string/AgregarAlumno" />

    </LinearLayout>

</LinearLayout>